crates/rivora-receipts/tests/snapshots/golden_tests__golden_invalid_receipt_validation_error.snap
---
source: crates/rivora-receipts/tests/golden_tests.rs
expression: err.to_string()
---
invalid receipt: evidence must not be empty — a receipt without evidence is invalid
